Add content length header check